# pomodoro

./: .gitignore  .pre-commit-config.yaml  context.md  pomodoro_app.spec  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
docs/: install_and_plugins.md  observability.md  prd.md  semantic_commits.md
docs/adrs/: 001 - Adoção da Arquitetura Hexagonal com Suporte a Plugins Externos.md  002 - Adoção do Pluggy como Sistema de Gerenciamento de Plugins.md  003 - Adoção do SQLite como Banco de Dados Embutido.md  004 - Adoção de gettext com Arquivos .po-.mo para Internacionalização.md  005 - Escolha do Framework de GUI – PySide6 (Qt for Python).md  006 - Estratégia de Verificação e Notificação de Atualizações.md  007 - API de Plugin e Contrato de Integração com Pluggy.md  008 - Layout de Pastas e Convenções do Projeto.md  009 - Estratégia de CI-CD com GitHub Actions para Build Multiplataforma.md  010 - Sistema de Notificações e Overlay Visual para Ciclos de Pomodoro.md  011 - Política de Segurança para Plugins (Security by Design).md  012 - Estratégia de Logging e Observabilidade.md  013 - Estratégia de Empacotamento e Distribuição Multiplataforma.md  014 - Suporte ao System Tray com QSystemTrayIcon (PySide6).md  (+1 more)
pomodoro_app/: __init__.py  __main__.py
pomodoro_app/core/: errors.py  (+3 more)
tests/: conftest.py
(+65 files in other folders)
